* fixing typographic details

--- a/README.org
+++ b/README.org
@@ -8,7 +8,7 @@
 ** Installation
 *** If you are using Intellij IDEA
     1. Create new project from version control.
-    2. As project source, give https://github.com/jarmohurri/ibio.git
+    2. As project source, give https://github.com/jarmohurri/ibio.git.
     3. Install git if asked to do that.
     4. After git has cloned the project, you can close the project.
     After this, to use this package in a project:
@@ -19,10 +19,10 @@
     5. This opens a file selector. Locate =ibio.jar= and select it.
     6. Select =OK=.
 *** If you are using git as your own version control system
-****  Add this library as a submodule of your project
-     #+begin_src sh
-     git submodule add https://github.com/jarmohurri/ibio.git
-     #+end_src
+    Just add this library as a submodule of your project:
+    #+begin_src sh
+      git submodule add https://github.com/jarmohurri/ibio.git
+    #+end_src
        
 ** Usage in Java
    1. Add the following line into your Java file:
