--- a/README.org
+++ b/README.org
@@ -14,9 +14,12 @@
     1. Create a new project from version control.
     2. As project source, give https://github.com/jarmohurri/ibio.git.
     3. Install git if asked to do that.
-    4. After git has cloned the project, build the package jar library:
-       1. Select =Build=.
-       2. UNDER CONSTRUCTION 2020-09-26.
+    4. After git has cloned the project, build the package binary jar
+       library:
+       1. Right click on file =build.xml=.
+       2. Select =Add as Ant build file=.
+       3. Select =Build -> ibio -> <default target>=.
+    5. You can now close the =ibio= project.
 
     After this, to use this package in a project:
     1. Select =File -> Project structure...=.
